--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -36,8 +36,8 @@ pa-vanadium=Breed Vanadium
 pa-zinc=Breed Zinc
 random-science-pack=Sorted Science Pack
 methane-combustion=Convert Methane to 550ºC Combustion Mixture.
-benzene-combustion=Convert Methane to 750ºC Combustion Mixture.
-tall-oil-combustion=Convert Methane to 600ºC Combustion Mixture.
+benzene-combustion=Convert Benzene to 750ºC Combustion Mixture.
+tall-oil-combustion=Convert Tall-oil to 600ºC Combustion Mixture.
 
 [recipe-description]
 
