--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -275,8 +275,8 @@ nano-assembler=Nano assembler
 cadaveric-arum=Cadaveric Arum Greenhouse
 kicalk-plantation=Kicalk Plantation
 zipir=Zipir Artificial Reef
-construction-robot-ht=HighTech Construction Pyanobot
-logistic-robot-ht=HighTech Logistic Pyanobot
+construction-robot-ht=HighTech Construction Pynobot
+logistic-robot-ht=HighTech Logistic Pynobot
 quantum-computer=Quantum Computer
 particle-accelerator=Particle Accelerator
 
