--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -279,6 +279,7 @@ construction-robot-ht=HighTech Construction Pynobot
 logistic-robot-ht=HighTech Logistic Pynobot
 quantum-computer=Quantum Computer
 particle-accelerator=Particle Accelerator
+blackhole=Singularity Energy Extractor
 
 [entity-description]
 auog-paddock=Shy night creatures known as Aougs.
@@ -301,6 +302,7 @@ construction-robot-ht=High-speed, high-cargo, low energy advanced construction r
 zipir=Place to raise the peaciful Zipirs in dry land.
 quantum-computer=Invest into space simulation instead of sending rockets.
 particle-accelerator=Ion Implementation and Nucleosynthesis.
+blackhole=Creates a mini black hole to extract rotational energy from the singularity. Keep it fed.
 
 [technology-name]
 basic-electronics=Basic Electronics
@@ -312,6 +314,7 @@ nano-tech=Nanotechnology
 aerogel=Aerogel
 earnshaw-theorem=Earnshaw´s theorem
 quantum=Quantum Computing
+penrose=Penrose Process
 nucleo=Nucleosynthesis
 
 [technology-description]
@@ -325,6 +328,7 @@ aerogel=Unlock aerogel technology.
 earnshaw-theorem=Classic inverse-square magnetic forces by gravitational field.
 quantum=Unlock quantum technologies and the Quantum Computer.
 nucleo=Entering into a dangerous area.
+penrose=Ultimate energy that can be extracted from a rotating black hole.
 
 [tile-name]
 
