--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -302,7 +302,7 @@ construction-robot-ht=High-speed, high-cargo, low energy advanced construction r
 zipir=Place to raise the peaciful Zipirs in dry land.
 quantum-computer=Invest into space simulation instead of sending rockets.
 particle-accelerator=Ion Implementation and Nucleosynthesis.
-blackhole=Creates a mini black hole to extract rotational energy from the singularity. Keep it fed.
+blackhole=Creates a mini black hole to extract rotational energy from the singularity. Keep it fed with any matter.
 
 [technology-name]
 basic-electronics=Basic Electronics
