finish up the code for the blackhole generator
Former-commit-id: f2018a6104c6c36bd23675e3fb643938120f3a77
Former-commit-id: 1f8426c0693b5fc3b5570c79e4e6f156c660cb69

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -191,6 +191,7 @@ crystallographic-substrate=Crystallographic Substrate
 proton-donor=Proton Donor
 proton-receiver=Proton Receiver
 dried-meat=Dried Meat
+blackhole-fuel=Matter
 
 [item-description]
 clay=just clay
@@ -224,6 +225,7 @@ nems=Nanomachines with a bright future.
 yag-laser-module=Yttrium-aluminum-garnet crystal used for solid-state lasers.
 myoglobin=Muscle protein.
 pyrolytic-carbon=Bad burned graphene.
+blackhole-fuel=It Doesn't
 
 [fluid-name]
 methane=Methane
