--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -225,7 +225,7 @@ nems=Nanomachines with a bright future.
 yag-laser-module=Yttrium-aluminum-garnet crystal used for solid-state lasers.
 myoglobin=Muscle protein.
 pyrolytic-carbon=Bad burned graphene.
-blackhole-fuel=It Doesn't
+blackhole-fuel=It Doesn´t.
 
 [fluid-name]
 methane=Methane
@@ -304,7 +304,7 @@ construction-robot-ht=High-speed, high-cargo, low energy advanced construction r
 zipir=Place to raise the peaciful Zipirs in dry land.
 quantum-computer=Invest into space simulation instead of sending rockets.
 particle-accelerator=Ion Implementation and Nucleosynthesis.
-blackhole=Creates a mini black hole to extract rotational energy from the singularity. Keep it fed with any matter.
+blackhole=Creates a mini black hole to extract rotational energy from the singularity. Keep it fed with any matter USING INSERTERS OR LOADERS.
 
 [technology-name]
 basic-electronics=Basic Electronics
