--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -282,6 +282,7 @@ logistic-robot-ht=HighTech Logistic Pynobot
 quantum-computer=Quantum Computer
 particle-accelerator=Particle Accelerator
 blackhole=Singularity Energy Extractor
+magic-furnace=Singularity Energy Extractor
 
 [entity-description]
 auog-paddock=Shy night creatures known as Aougs.
