--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -192,6 +192,7 @@ proton-donor=Proton Donor
 proton-receiver=Proton Receiver
 dried-meat=Dried Meat
 blackhole-fuel=Matter
+magic-furnace=Singularity Energy Extractor
 
 [item-description]
 clay=just clay
