--- a/locale/ru/locale.cfg
+++ b/locale/ru/locale.cfg
@@ -1,4 +1,4 @@
-﻿[recipe-name]
+[recipe-name]
 urea-decomposition=Разложеие мочевины
 fluidize-coke=Псевдоожижение кокса
 tall-oil-separation=Сепарация таллового масла
@@ -196,20 +196,30 @@ dried-meat=Высушенное мясо
 clay=Просто глина
 melamine=Первичный полимер
 melamine-resin=Простейшая резина
+ceramic=Керамика
 capacitor1=Первое поколение конденсаторов
 inductor1=Первое поколение катушек индуктивности
 resistor1=Первое поколение резисторов
 valve=Первое поколение транзисторов
+formica=Спрессованное дерево
 pcb1=Первое поколение подложек
 circuit-board-1=Первое поколение печатных плат
 rare-earth-ore=Даже более редкий чем на Земле
+rare-earth-powder=Первый этап редкоземельной продукции
+rare-earth-dust=Второй этап редкоземельной продукции
 bisphenol-a=Держите от себя подальше
 epoxy=Смола. Имеет множество применений
+pdms=Специальный гель для нанотехнологий
+nic-core=Ядро из никеля
+biopolymer=Продвинутый материал, предназначенный для некоторых целей
 rf-gel=Резерцин-формальдегидный гель
+kondo-substrate=Место для постройки мощного процессора
 heavy-fermion=Нетрадиционный сверхпроводник
 kondo-processor=Умеет производить 1 вычисление в секунду
+ndfeb-alloy=Сплав ниобия, бора и железа
 intelligent-unit=Каковы ваши намерения?
 zipir-carcass=Убиты милосердно
+rayon=Многоцелевая продвинутая фибра
 nems=У этих малышек большое будущее
 yag-laser-module=Твердтельный лазер на иттрий-алюминиевом гранате
 myoglobin=Мышечный белок
