--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -36,7 +36,7 @@ pa-vanadium=Breed Vanadium
 pa-zinc=Breed Zinc
 random-science-pack=Sorted Science Pack
 methane-combustion=Convert Methane to 550ºC Combustion Mixture.
-benzene-combustion=Convert Benzene to 750ºC Combustion Mixture.
+benzene-combustion=Convert Benzene to 520ºC Combustion Mixture.
 tall-oil-combustion=Convert Tall-oil to 600ºC Combustion Mixture.
 
 [recipe-description]
@@ -219,7 +219,7 @@ kondo-substrate=Place to build the powerful kondo-processor
 heavy-fermion=Unconventional superconductor.
 kondo-processor=Able to make 1pt of Kondo calculations per second.
 ndfeb-alloy=Neodimium-Iron-Boron alloy.
-intelligent-unit=Can you prove your purpose?
+intelligent-unit=Can you prove you´re self aware?
 zipir-carcass=It was killed with mercy.
 rayon=Advanced fiber with many uses.
 nems=Nanomachines with a bright future.
