made adjustments to allow effects

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -403,3 +403,6 @@ rare-earth-ore=Rare Earth Ore
 [autoplace-control-names]
 phosphate-rock=Phosphate Rock
 rare-earth-bolide=Rare Earth Bolide
+
+[item-limitation]
+lick my balls=These are not the modules you are looking for
