--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -360,7 +360,7 @@ cadaveric-arum-mk04=Green house to grow the Cadaveric arums, a smelly plant who 
 kicalk-plantation=Very useful FLUFFY trees where we can get high-quality fibers.
 logistic-robot-ht=High-speed, high-cargo, low energy advanced logistic robot to satisfy all your needs.
 construction-robot-ht=High-speed, high-cargo, low energy advanced construction robot to satisfy all your needs.
-zipir=Place to raise the peaciful Zipirs in dry land.
+zipir=Place to raise the peaceful Zipirs in dry land.
 quantum-computer=Invest into space simulation instead of sending rockets.
 particle-accelerator-mk01=Ion Implementation and Nucleosynthesis.
 particle-accelerator-mk02=Ion Implementation and Nucleosynthesis.
