--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -12,7 +12,7 @@ milling-ree=Milling rare-earth powder
 cumene-distilation=Distilation of cumene
 rendering=Zipir rendering
 antimatter-fusion=Slow-reacting antimatter
-steam-exchange5=Steam exchange 5
+steam-exchange5=Steam exchange
 pa-aromatics=Breed aromatics
 pa-benzene=Breed benzene
 pa-chromium=Breed chromium
@@ -36,9 +36,6 @@ pa-silver=Breed silver
 pa-vanadium=Breed vanadium
 pa-zinc=Breed zinc
 random-science-pack=Sorted science pack
-methane-combustion=Convert methane to combustion mixture (550ºC)
-benzene-combustion=Convert benzene to combustion mixture (520ºC)
-tall-oil-combustion=Convert tall oil to combustion mixture (600ºC)
 
 [recipe-description]
 
@@ -54,12 +51,12 @@ melamine=Melamine
 melamine-resin=Melamine resin
 urea=Urea
 ceramic=Ceramic
-inductor1=Inductor 1
-inductor2=Inductor 2
-inductor3=Inductor 3
+inductor1=Air-core inductors
+inductor2=Toroidal inductors
+inductor3=High-frequency SMD inductors
 capacitor1=Ceramic capacitors
 capacitor2=Electrolytic capacitors
-capacitor3=Multilayer ceramic capacitor
+capacitor3=Multilayer SMD capacitors
 resistor1=Low-power resistors
 resistor2=Medium-power resistors
 resistor3=High-power resistors
@@ -197,21 +194,27 @@ magic-furnace=Singularity energy extractor
 
 [item-description]
 clay=Just clay.
-melamine=Primary polymer
-melamine-resin=The most basic resin
-ceramic=Basic ceramic
-capacitor1=First generation capacitors
-inductor1=First generation inductors
-resistor1=First generation resistors
-valve=First generation transistors
-formica=Basic pressed wood
-pcb1=First generation PCBs
-circuit-board-1=First generation circuits
-rare-earth-ore=Even more rare than on Earth
+melamine=Primary polymer.
+melamine-resin=The most basic resin.
+ceramic=Basic ceramic.
+capacitor1=First generation capacitors.
+capacitor2=Great multipurpose capacitors, with a delicious liquid center! Don't let them bulge though...
+capacitor3=Multilayer ceramic chip capacitors (MLCC) for complex PCBs.
+resistor1=First generation resistors, suitable for low-power applications only.
+resistor2=Thick film resistors, suitable for use in a wide range of applications.
+resistor3=Can withstand high currents without burning out.
+inductor1=First generation inductors.
+inductor2=Cute metal donuts. May be inedible though.
+inductor3=High-performance inductors in a small SMD package.
+valve=Blessed with the power of thermionic electron emission.
+formica=Basic pressed wood.
+pcb1=First generation PCBs.
+circuit-board-1=First generation circuits.
+rare-earth-ore=Even more rare than on Earth.
 rare-earth-powder=First step of rare-earth element extraction.
 rare-earth-dust=Second step of rare-earth element extraction.
-bisphenol-a=Keep away from your body
-epoxy=Multipurpose resin
+bisphenol-a=Keep away from your body.
+epoxy=Multipurpose resin.
 pdms=Special gel to work into nanotech.
 nic-core=Nickel-based core.
 biopolymer=Advanced material for several purposes.
