--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -278,10 +278,10 @@ moondrop-greenhouse-mk01=Moondrop greenhouse Mk I
 moondrop-greenhouse-mk02=Moondrop greenhouse Mk II
 moondrop-greenhouse-mk03=Moondrop greenhouse Mk III
 moondrop-greenhouse-mk04=Moondrop greenhouse Mk IV
-fbreactor-mk01=FB reactor Mk I
-fbreactor-mk02=FB reactor Mk II
-fbreactor-mk03=FB reactor Mk III
-fbreactor-mk04=FB reactor Mk IV
+fbreactor-mk01=Fluidised bed reactor Mk I
+fbreactor-mk02=Fluidised bed reactor Mk II
+fbreactor-mk03=Fluidised bed reactor Mk III
+fbreactor-mk04=Fluidised bed reactor Mk IV
 auog-paddock=Auog paddock
 electronics-factory-mk01=Electronics factory Mk I
 electronics-factory-mk02=Electronics factory Mk II
