Revert combustion/MK changes
- Revert dynamic combustion mixture localisation
- Revert MK numbering scheme

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -36,6 +36,9 @@ pa-silver=Breed silver
 pa-vanadium=Breed vanadium
 pa-zinc=Breed zinc
 random-science-pack=Sorted science pack
+methane-combustion=Methane to combustion mixture (550ºC)
+benzene-combustion=Benzene to combustion mixture (520ºC)
+tall-oil-combustion=Tall oil to combustion mixture (600ºC)
 
 [recipe-description]
 
@@ -270,52 +273,52 @@ phosphate-rock=Ancient remains
 rare-earth-bolide=Rare-earth bolide
 phosphate-mine=Phosphate mine
 rare-earth-mine=Rare-earth extractor
-clay-pit-mk01=Clay pit Mk I
-clay-pit-mk02=Clay pit Mk II
-clay-pit-mk03=Clay pit Mk III
-clay-pit-mk04=Clay pit Mk IV
-moondrop-greenhouse-mk01=Moondrop greenhouse Mk I
-moondrop-greenhouse-mk02=Moondrop greenhouse Mk II
-moondrop-greenhouse-mk03=Moondrop greenhouse Mk III
-moondrop-greenhouse-mk04=Moondrop greenhouse Mk IV
-fbreactor-mk01=Fluidised bed reactor Mk I
-fbreactor-mk02=Fluidised bed reactor Mk II
-fbreactor-mk03=Fluidised bed reactor Mk III
-fbreactor-mk04=Fluidised bed reactor Mk IV
+clay-pit-mk01=Clay pit MK 1
+clay-pit-mk02=Clay pit MK 2
+clay-pit-mk03=Clay pit MK 3
+clay-pit-mk04=Clay pit MK 4
+moondrop-greenhouse-mk01=Moondrop greenhouse MK 1
+moondrop-greenhouse-mk02=Moondrop greenhouse MK 2
+moondrop-greenhouse-mk03=Moondrop greenhouse MK 3
+moondrop-greenhouse-mk04=Moondrop greenhouse MK 4
+fbreactor-mk01=Fluidised bed reactor MK 1
+fbreactor-mk02=Fluidised bed reactor MK 2
+fbreactor-mk03=Fluidised bed reactor MK 3
+fbreactor-mk04=Fluidised bed reactor MK 4
 auog-paddock=Auog paddock
-electronics-factory-mk01=Electronics factory Mk I
-electronics-factory-mk02=Electronics factory Mk II
-electronics-factory-mk03=Electronics factory Mk III
-electronics-factory-mk04=Electronics factory Mk IV
-pulp-mill-mk01=Pulp mill Mk I
-pulp-mill-mk02=Pulp mill Mk II
-pulp-mill-mk03=Pulp mill Mk III
-pulp-mill-mk04=Pulp mill Mk IV
-pcb-factory-mk01=PCB factory Mk I
-pcb-factory-mk02=PCB factory Mk II
-pcb-factory-mk03=PCB factory Mk III
-pcb-factory-mk04=PCB factory Mk IV
-chipshooter-mk01=Chipshooter machine Mk I
-chipshooter-mk02=Chipshooter machine Mk II
-chipshooter-mk03=Chipshooter machine Mk III
-chipshooter-mk04=Chipshooter machine Mk IV
-nano-assembler-mk01=Molecular assembler Mk I
-nano-assembler-mk02=Molecular assembler Mk II
-nano-assembler-mk03=Molecular assembler Mk III
-nano-assembler-mk04=Molecular assembler Mk IV
-cadaveric-arum-mk01=Cadaveric arum greenhouse Mk I
-cadaveric-arum-mk02=Cadaveric arum greenhouse Mk II
-cadaveric-arum-mk03=Cadaveric arum greenhouse Mk III
-cadaveric-arum-mk04=Cadaveric arum greenhouse Mk IV
+electronics-factory-mk01=Electronics factory MK 1
+electronics-factory-mk02=Electronics factory MK 2
+electronics-factory-mk03=Electronics factory MK 3
+electronics-factory-mk04=Electronics factory MK 4
+pulp-mill-mk01=Pulp mill MK 1
+pulp-mill-mk02=Pulp mill MK 2
+pulp-mill-mk03=Pulp mill MK 3
+pulp-mill-mk04=Pulp mill MK 4
+pcb-factory-mk01=PCB factory MK 1
+pcb-factory-mk02=PCB factory MK 2
+pcb-factory-mk03=PCB factory MK 3
+pcb-factory-mk04=PCB factory MK 4
+chipshooter-mk01=Chipshooter machine MK 1
+chipshooter-mk02=Chipshooter machine MK 2
+chipshooter-mk03=Chipshooter machine MK 3
+chipshooter-mk04=Chipshooter machine MK 4
+nano-assembler-mk01=Molecular assembler MK 1
+nano-assembler-mk02=Molecular assembler MK 2
+nano-assembler-mk03=Molecular assembler MK 3
+nano-assembler-mk04=Molecular assembler MK 4
+cadaveric-arum-mk01=Cadaveric arum greenhouse MK 1
+cadaveric-arum-mk02=Cadaveric arum greenhouse MK 2
+cadaveric-arum-mk03=Cadaveric arum greenhouse MK 3
+cadaveric-arum-mk04=Cadaveric arum greenhouse MK 4
 kicalk-plantation=Kicalk plantation
 zipir=Zipir Artificial reef
 construction-robot-ht=High-tech construction pynobot
 logistic-robot-ht=High-tech logistic pynobot
 quantum-computer=Quantum computer
-particle-accelerator-mk01=Particle accelerator Mk I
-particle-accelerator-mk02=Particle accelerator Mk II
-particle-accelerator-mk03=Particle accelerator Mk III
-particle-accelerator-mk04=Particle accelerator Mk IV
+particle-accelerator-mk01=Particle accelerator MK 1
+particle-accelerator-mk02=Particle accelerator MK 2
+particle-accelerator-mk03=Particle accelerator MK 3
+particle-accelerator-mk04=Particle accelerator MK 4
 blackhole=Singularity energy extractor
 magic-furnace=Singularity energy extractor
 
