Degree symbol fix
Replace ordinal indicator with correct degree symbol

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -36,9 +36,9 @@ pa-silver=Breed silver
 pa-vanadium=Breed vanadium
 pa-zinc=Breed zinc
 random-science-pack=Sorted science pack
-methane-combustion=Methane to combustion mixture (550ºC)
-benzene-combustion=Benzene to combustion mixture (520ºC)
-tall-oil-combustion=Tall oil to combustion mixture (600ºC)
+methane-combustion=Methane to combustion mixture (550°C)
+benzene-combustion=Benzene to combustion mixture (520°C)
+tall-oil-combustion=Tall oil to combustion mixture (600°C)
 
 [recipe-description]
 
