added multipurpose pipe

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -321,6 +321,8 @@ particle-accelerator-mk03=Particle accelerator MK 03
 particle-accelerator-mk04=Particle accelerator MK 04
 blackhole=Singularity energy extractor
 magic-furnace=Singularity energy extractor
+ht-pipes=Multipurpose Pipe
+ht-pipes-to-ground=Multipurpose pipe to ground
 
 [entity-description]
 auog-paddock=Shy night creatures known as aougs.
