--- a/locale/ru/locale.cfg
+++ b/locale/ru/locale.cfg
@@ -77,6 +77,8 @@ fbreactor-mk01=ПСК реактор MK01
 fbreactor-mk02=ПСК реактор MK02
 fbreactor-mk03=ПСК реактор MK03
 fbreactor-mk04=ПСК реактор MK04
+ht-pipes=Многоцелевая труба
+ht-pipes-to-ground=Многоцелевая подземная труба
 kicalk-plantation=Плантация кикалков
 logistic-robot-ht=Высокотехнологичный логистический Py-дрон
 magic-furnace=Извлекатель энергии из сингулярности
@@ -143,6 +145,8 @@ biopolymer=Продвинутый материал, предназначенны
 bisphenol-a=Держите от себя подальше
 blackhole-fuel=Это неважно
 capacitor1=Первое поколение конденсаторов
+capacitor2=Отличные многоцелевые конденсаторы с прекрасным жидким центром! Не позволяйте им выпирать...
+capacitor3=Многослойные керамические чиповые конденсаторы для сложных схем
 ceramic=Керамика
 circuit-board-1=Первое поколение печатных плат
 clay=Просто глина
@@ -150,6 +154,8 @@ epoxy=Имеет множество применений
 formica=Спрессованное дерево
 heavy-fermion=Нетрадиционный сверхпроводник
 inductor1=Первое поколение катушек индуктивности
+inductor2=Милые металические пончики. Возможно несъедобные
+inductor3=Высокопроизводительные катушки индуктивности в маленьком наборе SMD
 intelligent-unit=Можешь ли ты доказать, что обладаешь самосознанием?
 kondo-processor=Умеет делать 1 Кондо-вычисление в секунду
 kondo-substrate=Место для постройки мощного кондо-процессора
@@ -167,12 +173,14 @@ rare-earth-ore=Даже более редкая чем на Земле
 rare-earth-powder=Первый этап редкоземельного производства
 rayon=Многоцелевая продвинутая фибра
 resistor1=Первое поколение резисторов
+resistor2=Толстоплёночные резисторы, подходящие для большого количества маломощных систем
+resistor3=Может выдержать большие токи не сгорев
 rf-gel=Резерцин-формальдегидный гель
 valve=Первое поколение транзисторов
 yag-laser-module=Иттрий-алюминиево-баритный кристалл используемый в твердотельных лазерах
 zipir-carcass=Милосердно убитый
 [item-group-name]
-py-hightech=Py Высокотехнологичное производство
+py-hightech=Высокотехнологичное производство
 [item-limitation]
 lick my balls=Здесь нет моддулей, которые ты ищешь
 [item-name]
@@ -329,13 +337,14 @@ rare-earth-ore=Руда редкоземельных элементов
 [recipe-description]
 [recipe-name]
 antimatter-fusion=Медленная аннигиляция
-benzene-combustion=Переработка бензола в высокотемпературную смесь (750°С)
+benzene-combustion=Переработать бензол в высокотемпературную смесь (520°С)
 crusher-ree=Дробление руды редкоземельных элементов
 cumene-distilation=Перегонка кумола
 fluidize-coke=Псевдосжижение кокса
 heavy-n=Сильное легирование кремния до n-типа
+heavy-p-type=Сильное легирование кремния до p-типа
 light-n=Слабое легирования кремния до n-типа
-methane-combustion=Переработка метана в высокотемпературную смесь (500°С)
+methane-combustion=Переработать метан в высокотемпературную смесь (550°С)
 milling-ree=Измельчение песка редкоземельных элементов
 p-dope=Легирование кремния до p-типа
 pa-aluminium=Синтез алюминия
@@ -364,7 +373,7 @@ phosphoric-acid=Перегонка фосфористой кислоты
 random-science-pack=Случайный исследовательский пакет
 rendering=Потрошение ципиров
 steam-exchange5=Конвертация пара 5
-tall-oil-combustion=Переработка таллового масла в высокотемпературную смесь (600°С)
+tall-oil-combustion=Переработать талловое масло в высокотемпературную смесь (600°С)
 tall-oil-separation=Разделение таллового масла
 urea-decomposition=Разложеие мочевины
 [technology-description]
