--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -194,6 +194,8 @@ proton-receiver=Proton receiver
 dried-meat=Dried meat
 blackhole-fuel=Matter
 magic-furnace=Singularity energy extractor
+ht-locomotive=HighTech Locomotive MK01
+nexelit-battery=Nexelit Battery
 
 [item-description]
 clay=Just clay.
@@ -234,6 +236,8 @@ yag-laser-module=Yttrium aluminum garnet crystal used for solid-state lasers.
 myoglobin=Muscle protein.
 pyrolytic-carbon=Bad burned graphene.
 blackhole-fuel=It doesn't.
+ht-locomotive=Nexelit powered locomotive.
+nexelit-battery=Special energy unit made to power up the most modern transportation systems.
 
 [fluid-name]
 methane=Methane
@@ -323,7 +327,7 @@ blackhole=Singularity energy extractor
 magic-furnace=Singularity energy extractor
 ht-pipes=Multipurpose Pipe
 ht-pipes-to-ground=Multipurpose pipe to ground
-
+ht-locomotive=HighTech Locomotive MK01
 [entity-description]
 auog-paddock=Shy night creatures known as aougs.
 phosphate-rock=Remains of ancient life.
@@ -376,6 +380,7 @@ particle-accelerator-mk02=Ion implementation and nucleosynthesis.
 particle-accelerator-mk03=Ion implementation and nucleosynthesis.
 particle-accelerator-mk04=Ion implementation and nucleosynthesis.
 blackhole=Creates a mini black hole to extract rotational energy from the singularity. Keep it fed with any matter USING INSERTERS OR LOADERS.
+ht-locomotive=Nexelit powered locomotive.
 
 [technology-name]
 basic-electronics=Basic electronics
@@ -389,6 +394,7 @@ earnshaw-theorem=Earnshaw's theorem
 quantum=Quantum computing
 penrose=The Penrose process
 nucleo=Nucleosynthesis
+ht-trains=Hight Tech Trains MK01
 
 [technology-description]
 basic-electronics=Unlock basic electronic processes and components.
@@ -402,6 +408,7 @@ earnshaw-theorem=Classic inverse-square magnetic forces by gravitational fields.
 quantum=Unlock quantum technologies and the quantum computer.
 nucleo=Entering into a dangerous area.
 penrose=Ultimate energy that can be extracted from a rotating black hole.
+ht-trains=Unlocks the much more efficient nexelit powered trains.
 
 [tile-name]
 
@@ -415,3 +422,6 @@ rare-earth-bolide=Rare-earth bolide
 
 [item-limitation]
 lick my balls=These are not the modules you are looking for
+
+[fuel-category-name]
+nexelit=Nexelit improved fuels
