--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -195,6 +195,7 @@ dried-meat=Dried meat
 blackhole-fuel=Matter
 magic-furnace=Singularity energy extractor
 ht-locomotive=HighTech Locomotive MK01
+ht-generic-wagon=Nexelit reinforced wagon.
 nexelit-battery=Nexelit Battery
 
 [item-description]
@@ -327,7 +328,8 @@ blackhole=Singularity energy extractor
 magic-furnace=Singularity energy extractor
 ht-pipes=Multipurpose Pipe
 ht-pipes-to-ground=Multipurpose pipe to ground
-ht-locomotive=HighTech Locomotive MK01
+ht-locomotive=HighTech floating locomotive MK01
+ht-generic-wagon=Nexelit floating generic wagon
 [entity-description]
 auog-paddock=Shy night creatures known as aougs.
 phosphate-rock=Remains of ancient life.
@@ -381,6 +383,7 @@ particle-accelerator-mk03=Ion implementation and nucleosynthesis.
 particle-accelerator-mk04=Ion implementation and nucleosynthesis.
 blackhole=Creates a mini black hole to extract rotational energy from the singularity. Keep it fed with any matter USING INSERTERS OR LOADERS.
 ht-locomotive=Nexelit powered locomotive.
+ht-generic-wagon=Nexelit reinforced wagon.
 
 [technology-name]
 basic-electronics=Basic electronics
