--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -330,6 +330,7 @@ ht-pipes=Multipurpose Pipe
 ht-pipes-to-ground=Multipurpose pipe to ground
 ht-locomotive=HighTech floating locomotive MK01
 ht-generic-wagon=Nexelit floating generic wagon
+ht-generic-fluid-wagon=Nexelit floating generic fluid wagon
 [entity-description]
 auog-paddock=Shy night creatures known as aougs.
 phosphate-rock=Remains of ancient life.
@@ -384,6 +385,7 @@ particle-accelerator-mk04=Ion implementation and nucleosynthesis.
 blackhole=Creates a mini black hole to extract rotational energy from the singularity. Keep it fed with any matter USING INSERTERS OR LOADERS.
 ht-locomotive=Nexelit powered locomotive.
 ht-generic-wagon=Nexelit reinforced wagon.
+ht-generic-fluid-wagon=Nexelit reinforced fluid wagon.
 
 [technology-name]
 basic-electronics=Basic electronics
