--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -197,6 +197,7 @@ magic-furnace=Singularity energy extractor
 ht-locomotive=HighTech Locomotive MK01
 ht-generic-wagon=Nexelit reinforced wagon.
 nexelit-battery=Nexelit Battery
+used-nexelit-battery=Spent Nexelit Battery
 
 [item-description]
 clay=Just clay.
@@ -239,6 +240,7 @@ pyrolytic-carbon=Bad burned graphene.
 blackhole-fuel=It doesn't.
 ht-locomotive=Nexelit powered locomotive.
 nexelit-battery=Special energy unit made to power up the most modern transportation systems.
+used-nexelit-battery=No energy left.
 
 [fluid-name]
 methane=Methane
