--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -39,6 +39,7 @@ random-science-pack=Sorted science pack
 methane-combustion=Methane to combustion mixture (550°C)
 benzene-combustion=Benzene to combustion mixture (520°C)
 tall-oil-combustion=Tall oil to combustion mixture (600°C)
+nexelit-battery-recharge=Recharge Nexelit Battery
 
 [recipe-description]
 
