--- a/locale/de/locale.cfg
+++ b/locale/de/locale.cfg
@@ -1,43 +1,43 @@
 [recipe-name]
-urea-decomposition=Urea Zersetzung
-fluidize-coke=Koks Verflüssigung
-tall-oil-separation=Tallöl Trennung
-phosphoric-acid=Phosphorsäure Destillation
-light-n=Silizium zu N-Leicht Dopen
-heavy-n=Silizium zu N-Schwer Dopen
+urea-decomposition=Harnstoff-Zersetzung
+fluidize-coke=Koks-Verflüssigung
+tall-oil-separation=Tallöl-Trennung
+phosphoric-acid=Phosphorsäure-Destillation
+light-n=Silizium zu N-leicht Dopen
+heavy-n=Silizium zu N-schwer Dopen
 p-dope=Silizium zu P Dopen
-crusher-ree=Seltene Erden zerkleinern
-milling-ree=Seltene Erden mahlen
-cumene-distilation=Cumol destillieren
+crusher-ree=Seltene Erden Zerkleinern
+milling-ree=Seltene Erden Zermahlen
+cumene-distilation=Cumol Destillieren
 rendering=Zipir Rendern
-antimatter-fusion=Langsam reagierende Antimaterie
+antimatter-fusion=Langsam Reagierende Antimaterie
 steam-exchange5=Dampfaustausch 5
-pa-aromatics=Aromatische Kohlenwasserstoffe erbrüten
-pa-benzene=Benzen erbrüten
-pa-chromium=Chrom erbrüten
-pa-coal=Kohle erbrüten
-pa-niobium=Niob erbrüten
-pa-propene=Propan erbrüten
-pa-silicon=Silizium erbrüten
-pa-uranium=Uranerz erbrüten
-pa-uranium-235=Uran anreichern
-pa-aluminium=Aluminium erbrüten
-pa-boron=Bor erbrüten
-pa-cobalt=Kobalt erbrüten
-pa-diamond=Diamanten herstellen
-pa-gold=Gold erbrüten
-pa-helium=Helium erbrüten
-pa-hydrogen=Wasserstoff erbrüten
-pa-molybdenum=Molybdän erbrüten
-pa-nickel=Nickel erbrüten
-pa-oxygen=Sauerstoff erbrüten
-pa-silver=Silber erbrüten
-pa-vanadium=Vanadium erbrüten
-pa-zinc=Zink erbrüten
+pa-aromatics=Aromatische Kohlenwasserstoffe Erbrüten
+pa-benzene=Benzen Erbrüten
+pa-chromium=Chrom Erbrüten
+pa-coal=Kohle Erbrüten
+pa-niobium=Niob Erbrüten
+pa-propene=Propan Erbrüten
+pa-silicon=Silizium Erbrüten
+pa-uranium=Uranerz Erbrüten
+pa-uranium-235=Uran Enreichern
+pa-aluminium=Aluminium Erbrüten
+pa-boron=Bor Erbrüten
+pa-cobalt=Kobalt Erbrüten
+pa-diamond=Diamanten Herstellen
+pa-gold=Gold Erbrüten
+pa-helium=Helium Erbrüten
+pa-hydrogen=Wasserstoff Erbrüten
+pa-molybdenum=Molybdän Erbrüten
+pa-nickel=Nickel Erbrüten
+pa-oxygen=Sauerstoff Erbrüten
+pa-silver=Silber Erbrüten
+pa-vanadium=Vanadium Erbrüten
+pa-zinc=Zink Erbrüten
 random-science-pack=Sortierte Wissenschaftspakete
-methane-combustion=Methan zu 550C° brennbarem Gemisch verarbeiten.
-benzene-combustion=Benzen zu 520C° brennbarem Gemisch verarbeiten.
-tall-oil-combustion=Tallöl zu 600C° brennbarem Gemisch verarbeiten.
+methane-combustion=Methan zu 550°C-heißem Brennbaren Gemisch Verarbeiten
+benzene-combustion=Benzen zu 520°C-heißem Brennbaren Gemisch Verarbeiten
+tall-oil-combustion=Tallöl zu 600°C-heißem Brennbaren Gemisch Verarbeiten
 
 [recipe-description]
 
@@ -46,12 +46,12 @@ tall-oil-combustion=Tallöl zu 600C° brennbarem Gemisch verarbeiten.
 py-hightech=Py HighTech
 
 [item-name]
-phosphate-rock=Phosphat Stein
-rare-earth-ore=Seltene Erden Erz
+phosphate-rock=Phosphatstein
+rare-earth-ore=Seltenerd-Erz
 clay=Lehm
 melamine=Melamin
-melamine-resin=Melamin Harz
-urea=Urea
+melamine-resin=Melaminharz
+urea=Harnstoff
 ceramic=Keramik
 inductor1=Induktor 1
 inductor2=Induktor 2
@@ -59,13 +59,13 @@ inductor3=Induktor 3
 capacitor1=Kondensator 1
 capacitor2=Kondensator 2
 capacitor3=Kondensator 3
-resistor1=Wiederstand 1
-resistor2=Wiederstand 2
-resistor3=Wiederstand 3
+resistor1=Widerstand 1
+resistor2=Widerstand 2
+resistor3=Widerstand 3
 graphite=Graphit
-valve=Vakuum Röhre
+valve=Vakuumröhre
 diode=Diode
-diode3=SMD Diode
+diode3=SMD-Diode
 transistor=Transistor
 microchip=Mikrochip
 fiberboard=Faserplatte
@@ -78,81 +78,81 @@ pcb4=Gedrucktes Schaltkreissubstrat 4
 electronic-circuit=Leiterplatte 1
 advanced-circuit=Leiterplatte 2
 processing-unit=Leiterplatte 3
-powdered-phosphate-rock=Pulverisierter Phosphatstein
-light-n=LeichtN gedopetes Silizium
-heavy-n=SchwerN gedopetes Silizium
-p-dope=P gedoptes Silizium
-heavy-p-type=SchwerP gedopetest Silizium
-rare-earth-powder=Seltene Erden pulver
-rare-earth-dust=Seltene Erden Staub
-ree-concentrate=Seltene Erden Konzentrat
-reo=Seltene Erden Oxide
+powdered-phosphate-rock=Phosphatsteinpulver
+light-n=Leicht-n-gedopetes Silizium
+heavy-n=Schwer-n-gedopetes Silizium
+p-dope=P-gedoptes Silizium
+heavy-p-type=Schwer-p-gedopetes Silizium
+rare-earth-powder=Seltenerdpulver
+rare-earth-dust=Seltenerd-Staub
+ree-concentrate=Seltenerd-Konzentrat
+reo=Seltenerd-Oxide
 phenol=Phenol
 phenolicboard=Phenolische Platte
 bakelite=Bakelit
-silicon-wafer=Silizium Wafer
+silicon-wafer=Siliziumwafer
 cermet=Cermets
 crude-cermet=Rohe Cermets
-fecr-alloy=FeCr Legierung
+fecr-alloy=FeCr-Legierung
 silicon=Silizium
 glass-fiber=Glasfaser
 bisphenol-a=Bisphenol A
-epoxy=Epoxy
+epoxy=Epoxidharz
 fiberglass=Fiberglas
 pdms=PDMS (Polydimethylsiloxane)
-nic-core=Nic Kern
-pdms-graphene=PDMS-Graphen Base
-graphene-sheet=Graphen Lage
-graphene-roll=Graphen Rolle
-processor-core=Prozessor Kern
+nic-core=Nickelkern
+pdms-graphene=PDMS-Graphen-Basis
+graphene-sheet=Graphen-Lage
+graphene-roll=Graphen-Rolle
+processor-core=Prozessorkern
 processor=Prozessor
-phosphate-glass=Phosphat Glas
-high-flux-core=Hoch Flux Kerne
+phosphate-glass=Phosphatglas
+high-flux-core=Hoch-Flux-Kerne
 stone-wool=Steinwolle
-re-tin=RE-Zinn Legierung
-diode-core=Dioden Kern
-capacitor-core=Kondensator Kern
-capacitor-termination=Kondesnator Terminierung
-carbon-dust=Feiner Kohlenstoff Staub
+re-tin=Seltenerd-Zinn-Legierung
+diode-core=Diodenkern
+capacitor-core=Kondensatorkern
+capacitor-termination=Kondensatorterminierung
+carbon-dust=Feiner Kohlenstoffstaub
 biopolymer=Biopolymer
-carbon-nanotube=Kohlenstoff Nanoröhren
+carbon-nanotube=Kohlenstoffnanoröhren
 sodium-silicate=Natriumsilikat
-silica-powder=Silikat Pulver
+silica-powder=Silikatpulver
 colloidal-silica=Kieselsol
-nanochip=Nano-Chip
-raw-fiber=Roh Fasern
+nanochip=Nanochip
+raw-fiber=Rohfasern
 fiber=Fasern
 micro-fiber=Mikrofasern
 sub-denier-microfiber=Submikrofasern
 resorcinol=Resorcin
 rf-gel=RF-Gel
-clean-rf-gel=Transparentes RF Gel
+clean-rf-gel=Transparentes RF-Gel
 aerogel=Aerogel
-carbon-aerogel=Kohlenstoff Aerogel
-kondo-substrate=Kondo Substrat
-kondo-core=Kondo Kern
-kondo-processor=Kondo Prozessor
-heavy-fermion=Schweres Fermionen Material
+carbon-aerogel=Kohlenstoff-Aerogel
+kondo-substrate=Kondo-Substrat
+kondo-core=Kondo-Kern
+kondo-processor=Kondo-Prozessor
+heavy-fermion=Schweres Fermionen-Material
 crco-alloy=CrCo-Legierung
-nxag-matrix=Nexelit-Silber Matrix
+nxag-matrix=Nexelit-Silber-Matrix
 paradiamatic-resistor=Paradigmatischer Wiederstand
-zinc-acetate=Zink Actetat
+zinc-acetate=Zinkacetat
 dry-ralesia=Trockene Ralesia
-ralesia-powder=Ralesia Pulver
-zinc-nanocompound=Zink Nanocomplex
-zinc-nanocomplex=Zink Nanocomplex
-zno-nanoparticles=ZiO Nanopartikel
+ralesia-powder=Ralesiapulver
+zinc-nanocompound=Zink-Nanocomplex
+zinc-nanocomplex=Zink-Nanocomplex
+zno-nanoparticles=ZiO-Nanopartikel
 csle-diode=CS-LED
-ndfeb-alloy=NdFeB Legierung
-ndfeb-powder=NdFeB Pulver
-re-magnet=Seltene Erden Magnet
-sc-substrate=Superkonduktor Substrat
-superconductor=Superkonduktor
+ndfeb-alloy=NdFeB-Legierung
+ndfeb-powder=NdFeB-Pulver
+re-magnet=Seltenerd-Magnet
+sc-substrate=Supraleitersubstrat
+superconductor=Supraleiter
 fault-current-inductor=Spannungserhaltender Induktor
-nanocrystaline-core=Nanokrystalliner Kern
+nanocrystaline-core=Nanokristalliner Kern
 supercapacitor=Superkondensator
-supercapacitor-core=Superkondesnator Kern
-supercapacitor-shell=Superkondensator Hülle
+supercapacitor-core=Superkondensatorkern
+supercapacitor-shell=Superkondensatorhülle
 intelligent-unit=Intelligente Einheit
 zipir-carcass=Zipir Kadaver
 bones=Knochen
@@ -162,70 +162,70 @@ py-fertilizer=Dünger
 rayon=Rayon
 blood-meal=Blutmahlzeit
 nylon=Nylon
-nylon-parts=Nylon Teile
+nylon-parts=Nylon-Teile
 collagen=Kollagen
 resilin=Resilin
 hyperelastic-material=Hyperelastisches Material
-nano-wires=Nano-Drähte
+nano-wires=Nanodrähte
 nems=Nanoelektronische Systeme
 lithium-chloride=Lithiumchlorid
 volumetric-capacitor=Volumetrischer Kondensator
-yag-laser-module=YAG Laser Modul
-laser-module=Laser Modul
-lithium-niobate=Lithium Niobat
-parametric-oscilator=Optischer parametrischer Oszillator
+yag-laser-module=YAG-Lasermodul
+laser-module=Lasermodul
+lithium-niobate=Lithiumniobat
+parametric-oscilator=Optisch Parametrischer Oszillator
 myoglobin=Myoglobin
 paramagnetic-material=Paramagnetisches Material
-diamagnetic-material=Dimagnetisches Material
-superconductor-servomechanims=Superkonduktor Servomechanismus
+diamagnetic-material=Diamagnetisches Material
+superconductor-servomechanims=Supraleiter-Servomechanismus
 harmonic-absorber=Harmonischer Absorber
 pyrolytic-carbon=Pyrolytischer Kohlenstoff
 nv-center=Stickstoff-Leerstandszentrum
-quantum-dots=Quantum dots
-pi-josephson-junction=Pi Josephson Kreuzung
-var-josephson-junction=Varphi Josephson Kreuzung
-quantum-vortex-storage-system=Quantum Vortex Lagersystem
-bose-einstein-superfluid=Bose-Einstein Superfluid
+quantum-dots=Quantum Dots
+pi-josephson-junction=π-Josephson-Kreuzung
+var-josephson-junction=Varphi-Josephson-Kreuzung
+quantum-vortex-storage-system=Quantenvortex-Lagersystem
+bose-einstein-superfluid=Bose-Einstein-Superfluid
 antimatter=Antimaterie
 crystallographic-substrate=Kristallographisches Substrat
-proton-donor=Protonen Spender
-proton-receiver=Protonen Empfänger
+proton-donor=Protonenspender
+proton-receiver=Protonenempfänger
 dried-meat=Getrocknetes Fleisch
 blackhole-fuel=Materie
-magic-furnace=Singularitäts Energieextraktor
+magic-furnace=Singularitätsenergieextraktor
 
 [item-description]
 clay=Einfach Lehm.
-melamine=Primär Polymer.
-melamine-resin=Das Grundlegendste Harz.
+melamine=Primärpolymer.
+melamine-resin=Das grundlegendste Harz.
 ceramic=Keramik.
 capacitor1=Erste Generation von Kondensatoren.
 inductor1=Erste Generation von Induktoren.
-resistor1=Erste Generation von Wiederständen.
+resistor1=Erste Generation von Widerständen.
 valve=Erste Generation von Transistoren.
-formica=Basisches Gepresstes Holz.
+formica=Laminat.
 pcb1=Erste Generation von PCBs.
-circuit-board-1=Schaltkreis der ersten generation.
+circuit-board-1=Schaltkreis der ersten Generation.
 rare-earth-ore=Noch seltener als auf der Erde.
-rare-earth-powder=Erster Schritt der Seltenen Erden (RE/REE) Produktion.
-rare-earth-dust=Zweiter Schritt der RE Produktion.
+rare-earth-powder=Erster Schritt der Seltenerd (RE/REE-)Produktion.
+rare-earth-dust=Zweiter Schritt der RE-Produktion.
 bisphenol-a=Halte es von deinem Körper fern!
-epoxy=Super vielseitiges Harz.
+epoxy=Supervielseitiges Harz.
 pdms=Spezielles Gel für Nanotechnologie.
-nic-core=Nickel basierter Kern.
+nic-core=Nickelbasierter Kern.
 biopolymer=Fortschrittliches Material.
-rf-gel=Resorcinol-formaldehyd Gel.
+rf-gel=Resorcinolformaldehydgel.
 kondo-substrate=Hier kann der kraftvolle Kondo-Prozessor erbaut werden.
-heavy-fermion=Unkonventioneller Superkonduktor.
+heavy-fermion=Unkonventioneller Supraleiter.
 kondo-processor=Kann ca. 1Pt Kondokalkulationen in der Sekunde durchführen.
-ndfeb-alloy=Eine NdFeB Legierung.
-intelligent-unit=Kannst du beweisen das du Selbstbewusst bist?
+ndfeb-alloy=Eine NdFeB-Legierung.
+intelligent-unit=Schaffst du den Turing-Test?
 zipir-carcass=Es wurde mit Gnade getötet.
 rayon=Fortschrittliche Fasern.
 nems=Nanomaschinen mit einer glänzenden Zukunft.
-yag-laser-module=Yttrium-Aluminium-Garnet Kristall für SolidStateLaser.
-myoglobin=Muskel Protein.
-pyrolytic-carbon=Stark verbranntes graphene.
+yag-laser-module=Yttrium-Aluminium-Garnet-Kristall für Solid-State-Laser.
+myoglobin=Muskelprotein.
+pyrolytic-carbon=Stark verbranntes Graphen.
 blackhole-fuel=Spielt keine Rolle.
 
 [fluid-name]
@@ -233,113 +233,113 @@ methane=Methan
 methanal=Formaldehyd
 ammonia=Ammoniak
 cyanic-acid=Cyansäure
-black-liquor=Schwarzlikör
+black-liquor=Schwarzer Likör
 tall-oil=Tallöl
 benzene=Benzen
 phosphorous-acid=Phosphorsäure
 phosphoric-acid=Phosphorischesäure
-phosphine-gas=Phosphine Gas
+phosphine-gas=Phosphangas
 propene=Propan
-ethylene=Ethylen
-ree-slurry=Seltene Erden Brühe
-ree-solution=Seltene Erden Lösung
-cumene=Cumene
+ethylene=Ethen
+ree-slurry=Seltenerd-Brühe
+ree-solution=Seltenerd-Lösung
+cumene=Cumol
 acetone=Aceton
 ech=Epichlorohydrin(ECH)
-chloromethane=Chloromethan
-dimethyldichlorosilane=Dimethyldichlorosilan
-dms=Dimethyl sulfide(DMS)
-msa=Methanesulfonic acid(MSA)
-bacteria-2=Knallgas Bakterie
-soaked-gel=Eingeweichtes Gel
+chloromethane=Chlormethan
+dimethyldichlorosilane=Dichlorsilan
+dms=Dimethylsulfid(DMS)
+msa=Methansulfosäure(MSA)
+bacteria-2=Knallgas-Bakterie
+soaked-gel=Eingeweichtes-Gel
 acrolein=Acrolein
 acetic-acid=Essigsäure
-raw-ralesia-extract=Rohes Ralesia Extrakt
-ralesia-extract=Ralesia Extrakt
+raw-ralesia-extract=Rohes Ralesiaextrakt
+ralesia-extract=Ralesiaextrakt
 blood=Blut
-carbon-sulfide=Carbonyl sulfid
+carbon-sulfide=Carbonylsulfid
 etching=Ätzlösung
-nitrobenzene=Nitrobenzin
+nitrobenzene=Nitrobenzol
 
 [entity-name]
 phosphate-rock=Uralte Überbleibsel
-rare-earth-bolide=Selten Erden Klumpen
-phosphate-mine=Phosphat Mine
-rare-earth-mine=Seltene Erden Extraktor
+rare-earth-bolide=Seltenerd-Klumpen
+phosphate-mine=Phosphatmine
+rare-earth-mine=Seltenerd-Extraktor
 clay-pit=Lehmgrube
 moondrop-greenhouse=Moondrop-Gewächshaus
 fbreactor=Fließbettreaktor
-auog-paddock=Auog Paddock
-electronics-factory=Elektronik Fabrik
+auog-paddock=Auog-Koppel
+electronics-factory=Elektronikfabrik
 pulp-mill=Breimühle
-pcb-factory=PCB Fabrick
-chipshooter=Chipshooter Maschine
-nano-assembler=Nano Konstrukteur
-cadaveric-arum=Cadaveric Arum Gewächshaus
-kicalk-plantation=Kicalk Plantage
-zipir=Zipir Küntliches Riff
-construction-robot-ht=HighTech Konstruktions Pynobot
-logistic-robot-ht=HighTech Logistik Pynobot
-quantum-computer=Quantum Computer
-particle-accelerator=Teilchen beschleuniger
-blackhole=Singularitäts Energieextraktor
-magic-furnace=Singularitäts Energieextraktor
+pcb-factory=PCB-Fabrick
+chipshooter=Chipshooter-Maschine
+nano-assembler=Nano-Assembler
+cadaveric-arum=Leichenarum-Gewächshaus
+kicalk-plantation=Kicalk-Plantage
+zipir=Künstliches Zipir-Riff
+construction-robot-ht=Hightech-Konstruktionspyanobot
+logistic-robot-ht=Hightech-Logistikpyanobot
+quantum-computer=Quantencomputer
+particle-accelerator=Teilchenbeschleuniger
+blackhole=Singularitätsenergieextraktor
+magic-furnace=Singularitätsenergieextraktor
 
 [entity-description]
-auog-paddock=Schüchterne Kreaturen bekannt als Aougs.
+auog-paddock=Schüchterne Kreaturen bekannt als Auogs.
 phosphate-rock=Überbleibsel eines antiken Lebens.
 rare-earth-bolide=Ein Geschenk des Himmels.
-phosphate-mine=Gebäude das Phosphat(e) extrahieren kann.
+phosphate-mine=Gebäude das Phosphat extrahieren kann.
 rare-earth-mine=Ein Gebäude das Seltene Erden aus den Brocken extrahiert.
-clay-pit=Eine Lehmgrube.
+clay-pit=Eine Lehmgrube, mehr aber auch nicht.
 moondrop-greenhouse=Moondrops sind Alienpflanzen, die Methan produzieren.
 fbreactor=Normaler Fließbettreaktor.
-electronics-factory=Hier werden Elektronische Komponenten Hergestellt.
-pulp-mill=Fortfahrende Verarbeitung von organischer Materie.
-pcb-factory=Automatisierte PCB Fabrik.
-chipshooter=Hochgeschwindigkeits Leiterplattenbestückung.
-nano-assembler=Ein Ort für Nanoherstellungen.
-cadaveric-arum=Ein Gewächshaus mit Pflanzen, die Schwefelgase ausstoßen.
-kicalk-plantation=Nützliche, Fluffige Bäume für hochqualitative Fasern.
-logistic-robot-ht=Der Perfekte Logistik Roboter.
-construction-robot-ht=Der Perfekte Bau Roboter.
+electronics-factory=Hier werden elektronische Komponenten hergestellt.
+pulp-mill=Weitere Verarbeitung von organischer Materie.
+pcb-factory=Automatisierte PCB-Fabrik.
+chipshooter=Hochgeschwindigkeitsleiterplattenbestückung.
+nano-assembler=Die Maschine für alles, das im mikroskopisch Kleinen produziert werden muss.
+cadaveric-arum=Ein Gewächshaus für Pflanzen, die Schwefelgase ausstoßen.
+kicalk-plantation=Nützliche, fluffige Bäume für feinste Qualitätsfasern.
+logistic-robot-ht=Der einzig wahre Logistikroboter.
+construction-robot-ht=Der einzig wahre Bauroboter.
 zipir=Hier werden Zipirs gezüchtet.
-quantum-computer=Anstelle Raketen zu starten, investiere doch in Simulationen.
-particle-accelerator=Ionen Implementation and Nucleosynthese.
-blackhole=Mit Greifarmen oder mit Loaders und jeglicher Materie kann ein Schwarzes Loch gefüttert werden, welches Rotationsenergie für die Energiegewinnung freigibt.
+quantum-computer=Die Matrix für alle Raketenwissenschaftler.
+particle-accelerator=Der Teilchenbeschleuniger für Jedermann.
+blackhole=Ein kleines rotierendes schwarzes Loch, das jegliche Materie in reine Energie umwandelt.
 
 [technology-name]
 basic-electronics=Grundlegende Elektronik
 advanced-electronics=Fortschrittliche Elektronik
-semiconductor-doping=Halbleiter Doping
-rare-earth-tech=Seltene Erden Technologie
-graphene=Graphen Technologie
+semiconductor-doping=Halbleiterdoping
+rare-earth-tech=Seltene-Erden-Technologie
+graphene=Graphen-Technologie
 nano-tech=Nanotechnologie
 aerogel=Aerogel
-earnshaw-theorem=Earnshaw´s Theorem
-quantum=Quantum Computing
-penrose=Penrose Prozess
-nucleo=Nucleosynthese
+earnshaw-theorem=Earnshaw-Theorem
+quantum=Quanten-Computing
+penrose=Penrose-Prozess
+nucleo=Nukleosynthese
 
 [technology-description]
 basic-electronics=Schaltet grundlegende Komponenten und Prozesse frei.
-advanced-electronics=Fortschrittliche Prozesse und Komponente freischalten.
-semiconductor-doping=Doping von Halbleitern ermöglichen.
-rare-earth-tech=Seltene Erden Verarbeiten
-graphene=Graphen Technologien.
-nano-tech=Schaltet Nanotechnologie frei-
-aerogel=Schaltet Aerogele frei.
-earnshaw-theorem=Komplizierte Kraft die mit Gravitation operiert.
-quantum=Schaltet Quantumcom Computing frei.
-nucleo=Betrete eíne gefährliche Area!
-penrose=Ultimative Energieerzeugung!
+advanced-electronics=Schaltet fortschrittliche Komponenten und Prozesse frei.
+semiconductor-doping=Ermöglkicht das Doping von Halbleitern.
+rare-earth-tech=Ermöglicht die Verarbeitung von Seltenen Erden.
+graphene=Ermöglicht die Herstellung vom Supermaterial Graphen.
+nano-tech=Ermöglicht die Herstellung von Nanotechnologie.
+aerogel=Ermöglicht die Herstellung von Aerogel.
+earnshaw-theorem=Komplizierter physikalischer Effekt der Elektrodynamik.
+quantum=Ermöglicht den Bau von Quantencomputern. GOING QUANTUM!
+nucleo=Ab hier wird es gefährlich! Achtung vor schwarzen Löchern!
+penrose=Die ultimative Energieerzeugung! MEHR ENERGIE!
 
 [tile-name]
 
 [ore-name]
-phosphate-rock=Phosphat Stein
-rare-earth-ore=Seltene Erden Erz
+phosphate-rock=Phosphatstein
+rare-earth-ore=Seltenerd-Erz
 
 [autoplace-control-names]
-phosphate-rock=Phosphat Stein
-rare-earth-bolide=Seltene Erden Brocken
+phosphate-rock=Phosphatstein
+rare-earth-bolide=Seltenerd-Brocken
