tweaking crashed assembler

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -433,3 +433,6 @@ lick my balls=These are not the modules you are looking for
 
 [fuel-category-name]
 nexelit=Nexelit improved fuels
+
+[gui-game-finished]
+victory=Victory! Congratulations, you have beaten Pyanodon's High Tech.
