fixing circuit 1 - 3 tech unlocks

--- a/locale/de/locale.cfg
+++ b/locale/de/locale.cfg
@@ -63,7 +63,7 @@ resistor1=Widerstand 1
 resistor2=Widerstand 2
 resistor3=Widerstand 3
 graphite=Graphit
-valve=Vakuumröhre
+vacuum-tube=Vakuumröhre
 diode=Diode
 diode3=SMD-Diode
 transistor=Transistor
@@ -202,7 +202,7 @@ ceramic=Keramik.
 capacitor1=Erste Generation von Kondensatoren.
 inductor1=Erste Generation von Induktoren.
 resistor1=Erste Generation von Widerständen.
-valve=Erste Generation von Transistoren.
+vacuum-tube=Erste Generation von Transistoren.
 formica=Laminat.
 pcb1=Erste Generation von PCBs.
 circuit-board-1=Schaltkreis der ersten Generation.
