--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -65,7 +65,7 @@ resistor1=High-power resistors
 resistor2=Medium-power resistors
 resistor3=Low-power resistors
 graphite=Graphite
-valve=Vacuum tube
+vacuum-tube=Vacuum tube
 diode=Diodes
 diode3=SMD diodes
 transistor=Transistors
@@ -214,7 +214,7 @@ resistor3=Can withstand high currents without burning out.
 inductor1=First generation inductors.
 inductor2=Cute metal donuts. May be inedible though.
 inductor3=High-performance inductors in a small SMD package.
-valve=Blessed with the power of thermionic electron emission.
+vacuum-tube=Blessed with the power of thermionic electron emission.
 formica=Basic pressed wood.
 pcb1=First generation PCBs.
 circuit-board-1=First generation circuits.
@@ -334,6 +334,7 @@ ht-pipes-to-ground=Multipurpose pipe to ground
 ht-locomotive=HighTech floating locomotive MK01
 ht-generic-wagon=Nexelit floating generic wagon
 ht-generic-fluid-wagon=Nexelit floating generic fluid wagon
+crash-site-assembling-machine-1-repaired=Crashed ship assembler
 [entity-description]
 auog-paddock=Shy night creatures known as aougs.
 phosphate-rock=Remains of ancient life.
@@ -391,8 +392,12 @@ ht-generic-wagon=Nexelit reinforced wagon.
 ht-generic-fluid-wagon=Nexelit reinforced fluid wagon.
 
 [technology-name]
+vacuum-tube-electronics=Vacuum tube electronics
 basic-electronics=Basic electronics
 advanced-electronics=Advanced electronics
+intergrated-circuits-1=Small scale integrated circuits
+intergrated-circuits-2=Medium scale integrated circuits
+intergrated-circuits-3=Large scale integrated circuits
 semiconductor-doping=Semiconductor doping
 rare-earth-tech=Rare-earth technology
 graphene=Graphene technology
@@ -405,8 +410,13 @@ nucleo=Nucleosynthesis
 ht-trains=Hight Tech Trains MK01
 
 [technology-description]
-basic-electronics=Unlock basic electronic processes and components.
-advanced-electronics=Unlock advanced electronic processes and components.
+vacuum-tube-electronics=Unlock very basic vacuum tube based circuits
+basic-electronics=Unlock basic transistor based processes and components.
+advanced-electronics=Unlock advanced transistors processes and components.
+advanced-electronics-2=Unlock very advanced transistors processes and components.
+intergrated-circuits-1=Early silicon based circuits with only a few transistors per chip
+intergrated-circuits-2=More advanced circuits with thousands of miniturized transistors
+intergrated-circuits-3=Highly advanced circuits with millions of near atomic scale transistors
 semiconductor-doping=Unlock doping technology by vapor deposition.
 rare-earth-tech=Give access to explore the rare-earth elements.
 graphene=Unlock graphene technologies and production.
