--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -408,6 +408,9 @@ quantum=Quantum computing
 penrose=The Penrose process
 nucleo=Nucleosynthesis
 ht-trains=Hight Tech Trains MK01
+auog=Auog
+kicalk=Kicalk
+moondrop=Moondrop
 
 [technology-description]
 vacuum-tube-electronics=Unlock very basic vacuum tube based circuits
@@ -435,8 +438,8 @@ phosphate-rock=Phosphate rock
 rare-earth-ore=Rare-earth ore
 
 [autoplace-control-names]
-phosphate-rock=Phosphate rock
-rare-earth-bolide=Rare-earth bolide
+phosphate-rock=[img=entity.phosphate-rock] Phosphate rock
+rare-earth-bolide=[img=entity.rare-earth-bolide] Rare-earth bolide
 
 [item-limitation]
 lick my balls=These are not the modules you are looking for
