--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -331,7 +331,7 @@ blackhole=Singularity energy extractor
 magic-furnace=Singularity energy extractor
 ht-pipes=Multipurpose Pipe
 ht-pipes-to-ground=Multipurpose pipe to ground
-ht-locomotive=HighTech floating locomotive MK01
+ht-locomotive=HighTech floating locomotive
 ht-generic-wagon=Nexelit floating generic wagon
 ht-generic-fluid-wagon=Nexelit floating generic fluid wagon
 [entity-description]
