--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -407,10 +407,42 @@ earnshaw-theorem=Earnshaw's theorem
 quantum=Quantum computing
 penrose=The Penrose process
 nucleo=Nucleosynthesis
-ht-trains=Hight Tech Trains MK01
+ht-trains=High tech trains MK01
 auog=Auog
 kicalk=Kicalk
 moondrop=Moondrop
+biofilm=Biofilm
+biopolymer=Biopolymer
+biotech=Biotech
+cadaveric-arum=Cadaveric arum
+carbon-nanotube=Carbon nanotube
+collagen=Collagen
+colloidal-silica=Colloidal ilica
+electronics-machines=Advanced electronics machines
+epoxy=Epoxy
+fertilizer=Fertilizer
+fiberboard=Fiberboard
+fiberglass=Fiberglass
+fluid-processing-machines=Fluid processing machines
+ht-robotics=High tech robotics
+magnetic-core=Magnetic Core
+melamine=Melamine
+microfibers=Microfibers
+nems=Nanoelectromechanical systems
+nenbit-matrix=NENBIT Matrix
+nitrobenzene=Nitrobenzene
+nylon=Nylon
+paramagnetic-material=Paramagnetic material
+parametric-oscilator=Optical parametric oscillator
+phenol=Phenol
+phosphates=Phosphate processing
+propene=Propene
+rayon=Rayon
+re-magnet=Neodymium magnet
+supercapacitor=Supercapacitor
+superconductor=Superconductor
+zipir=Zipir
+zno-nanoparticles=Zinc oxide nanoparticles
 
 [technology-description]
 vacuum-tube-electronics=Unlock very basic vacuum tube based circuits
