Add tech graphics

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -395,9 +395,9 @@ ht-generic-fluid-wagon=Nexelit reinforced fluid wagon.
 vacuum-tube-electronics=Vacuum tube electronics
 basic-electronics=Basic electronics
 advanced-electronics=Advanced electronics
-intergrated-circuits-1=Small scale integrated circuits
-intergrated-circuits-2=Medium scale integrated circuits
-intergrated-circuits-3=Large scale integrated circuits
+integrated-circuits-1=Small scale integrated circuits
+integrated-circuits-2=Medium scale integrated circuits
+integrated-circuits-3=Large scale integrated circuits
 semiconductor-doping=Semiconductor doping
 rare-earth-tech=Rare-earth technology
 graphene=Graphene technology
@@ -435,7 +435,7 @@ nylon=Nylon
 paramagnetic-material=Paramagnetic material
 parametric-oscilator=Optical parametric oscillator
 phenol=Phenol
-phosphates=Phosphate processing
+phosphorous-processing=Phosphorous processing
 propene=Propene
 rayon=Rayon
 re-magnet=Neodymium magnet
