added roboport mk03

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -335,6 +335,7 @@ ht-locomotive=HighTech floating locomotive
 ht-generic-wagon=Nexelit floating generic wagon
 ht-generic-fluid-wagon=Nexelit floating generic fluid wagon
 crash-site-assembling-machine-1-repaired=Crashed ship assembler
+py-roboport-mk03=Py roboport MK 03
 [entity-description]
 auog-paddock=Shy night creatures known as aougs.
 phosphate-rock=Remains of ancient life.
