Add missing tech locales

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -445,6 +445,15 @@ superconductor=Superconductor
 zipir=Zipir
 zno-nanoparticles=Zinc oxide nanoparticles
 
+# new - please verify names are as desired
+fiberboard-mk02=Fiberboard 2
+integrated-circuits=Integrated circuits __1__
+nucleo-mk02=Nucleosynthesis 2
+nucleo-mk03=Nucleosynthesis 3
+plastics-mk02=Plastics 2
+plastics-mk03=Plastics 3
+semiconductor-doping-mk02=Semiconductor doping 2
+
 [technology-description]
 vacuum-tube-electronics=Unlock very basic vacuum tube based circuits
 basic-electronics=Unlock basic transistor based processes and components.
