--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -447,7 +447,7 @@ zno-nanoparticles=Zinc oxide nanoparticles
 
 # new - please verify names are as desired
 fiberboard-mk02=Fiberboard 2
-integrated-circuits=Integrated circuits __1__
+integrated-circuits=Integrated circuits
 nucleo-mk02=Nucleosynthesis 2
 nucleo-mk03=Nucleosynthesis 3
 plastics-mk02=Plastics 2
