--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -453,6 +453,8 @@ nucleo-mk03=Nucleosynthesis 3
 plastics-mk02=Plastics 2
 plastics-mk03=Plastics 3
 semiconductor-doping-mk02=Semiconductor doping 2
+ethylene=Ethylene
+plastics-mk04=Plastics 4
 
 [technology-description]
 vacuum-tube-electronics=Unlock very basic vacuum tube based circuits
