fix all the missing translations

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -455,6 +455,8 @@ semiconductor-doping-mk02=Semiconductor doping 2
 ethylene=Ethylene
 plastics-mk04=Plastics 4
 
+ceramic=Ceramic
+
 [technology-description]
 vacuum-tube-electronics=Unlock very basic vacuum tube based circuits
 basic-electronics=Unlock basic transistor based processes and components.
@@ -489,5 +491,6 @@ lick my balls=These are not the modules you are looking for
 
 [fuel-category-name]
 nexelit=Nexelit improved fuels
+blackhole=matter smasher
 
 [gui-game-finished]
