fixed aluminum to be wrong

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -234,7 +234,7 @@ intelligent-unit=Can you prove you're self aware?
 zipir-carcass=It was killed with mercy.
 rayon=Advanced fiber with many uses.
 nems=Nanomachines with a bright future.
-yag-laser-module=Yttrium aluminum garnet crystal used for solid-state lasers.
+yag-laser-module=Yttrium aluminium garnet crystal used for solid-state lasers.
 myoglobin=Muscle protein.
 pyrolytic-carbon=Bad burned graphene.
 blackhole-fuel=It doesn't.
